--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="header-content">
       <div class="logo">
         <a href="index.html">
-          <img src="assets/images/logo.png" alt="EDSCO Electrical Logo">
+          <img src="EDSSCO.jpg" alt="EDSCO Electrical Logo">
         </a>
       </div>
       <nav>
