--- a/products.html
+++ b/products.html
@@ -12,7 +12,7 @@
     <div class="header-content">
       <div class="logo">
         <a href="index.html">
-          <img src="assets/images/logo.png" alt="EDSCO Electrical Logo">
+          <img src="assets/images/edsco.jpg" alt="EDSCO Electrical Logo">
         </a>
       </div>
       <nav>
@@ -56,7 +56,7 @@
           </div>
 
           <div class="product-card">
-            <img src="https://images.pexels.com/photos/162539/architecture-building-amsterdam-blue-162539.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Circuit Breakers" class="product-image">
+            <img src="Circuit-Breaker.jpg" alt="Circuit Breakers" class="product-image">
             <div class="product-info">
               <h3>Circuit Breakers</h3>
               <p>Professional-grade circuit breakers for optimal electrical protection. Reliable safety devices that meet all industry standards and regulations.</p>
