--- a/products.html
+++ b/products.html
@@ -60,7 +60,7 @@
             <div class="product-info">
               <h3>Circuit Breakers</h3>
               <p>Professional-grade circuit breakers for optimal electrical protection. Reliable safety devices that meet all industry standards and regulations.</p>
-              <a href="contact.html" class="btn btn-primary">Request Quote</a>
+              <a href="index.html" class="btn btn-primary">Request Quote</a>
             </div>
           </div>
 
