--- a/products.html
+++ b/products.html
@@ -56,7 +56,7 @@
           </div>
 
           <div class="product-card">
-            <img src="assets/images/circuit-breaker.jpg" alt="Circuit Breakers" class="product-image">
+            <img src="https://images.pexels.com/photos/1112598/pexels-photo-1112598.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Circuit Breakers" class="product-image">
             <div class="product-info">
               <h3>Circuit Breakers</h3>
               <p>Professional-grade circuit breakers for optimal electrical protection. Reliable safety devices that meet all industry standards and regulations.</p>
